POWR-1434 paths, views, search, styles, eva, remove old workflow

--- a/web/modules/custom/portland_migrations/migrations/city_code_chapters.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_chapters.yml
@@ -19,6 +19,9 @@ process:
     no_stub: true
     source: title
   field_legacy_path: url
+  field_code_level:
+    plugin: default_value
+    default_value: Chapter
 destination:
   plugin: 'entity:node'
-  default_bundle: code_chapter
+  default_bundle: city_code
