--- a/web/sites/default/config/core.entity_view_display.node.city_charter.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_charter.teaser.yml
@@ -34,6 +34,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_charter_level: true
+  field_charter_parent: true
   field_legacy_path: true
   field_numeric_order: true
   field_section_body: true
