--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -5,32 +5,32 @@ dependencies:
   module:
     - search_api_solr
     - taxonomy
-    - group
     - node
+    - group
     - search_api
     - portland
   config:
-    - field.storage.group.field_audience
-    - field.storage.group.field_official_organization_name
-    - field.storage.group.field_official_title
-    - field.storage.group.field_search_keywords
-    - field.storage.group.field_shortname_or_acronym
-    - field.storage.group.field_summary
-    - field.storage.group.field_topics
+    - field.storage.node.field_community_actions
     - field.storage.node.field_audience
     - field.storage.node.field_body_content
-    - field.storage.node.field_community_actions
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
+    - field.storage.group.field_official_organization_name
+    - field.storage.group.field_official_title
     - field.storage.node.field_policy_category
     - field.storage.node.field_policy_type
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
     - field.storage.node.field_section_body
+    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
+    - field.storage.group.field_summary
     - field.storage.node.field_summary
+    - field.storage.group.field_audience
+    - field.storage.group.field_search_keywords
+    - field.storage.group.field_topics
     - field.storage.node.field_topics
     - search_api.server.searchstax
 third_party_settings:
@@ -337,9 +337,8 @@ field_settings:
           project: default
         'entity:node':
           calendar_item: default
-          charter_article: default
-          charter_chapter: default
-          charter_section: default
+          city_charter: default
+          city_code: default
           city_service: default
           code_chapter: default
           code_section: default
@@ -494,17 +493,11 @@ processor_settings:
     boosts:
       'entity:group':
         datasource_boost: !!float 8
-        bundle_boosts:
-          bureau_office: !!float 8
-          elected_official: !!float 8
-          program: !!float 8
-          project: !!float 8
       'entity:node':
         datasource_boost: !!float 1
         bundle_boosts:
-          charter_article: !!float 0
-          charter_chapter: !!float 0
-          charter_section: !!float 1
+          city_charter: !!float 2
+          city_code: !!float 2
           city_service: !!float 8
           code_chapter: !!float 0
           code_section: !!float 1
