--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -28,6 +28,7 @@ view_mode_configuration:
   'entity:group_project': search_result
   'entity:node_calendar_item': search_result
   'entity:node_city_charter': search_result
+  'entity:node_city_code': search_result
   'entity:node_city_service': search_result
   'entity:node_code_chapter': search_result
   'entity:node_code_section': search_result
