--- a/web/sites/default/config/views.view.city_code.yml
+++ b/web/sites/default/config/views.view.city_code.yml
@@ -1,14 +1,16 @@
-uuid: 090d7bde-a69b-44e0-bd14-9b9f8f7add50
+uuid: 57594092-a59f-4d98-96aa-c1fc22bdc510
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.code_title
+    - node.type.city_code
   module:
+    - eva
     - node
+    - options
     - user
 id: city_code
-label: 'City Code (Titles)'
+label: 'City Code'
 module: views
 description: ''
 tag: ''
@@ -93,7 +95,7 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: h2
+          element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
@@ -130,7 +132,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            code_title: code_title
+            city_code: city_code
           group: 1
           exposed: false
           expose:
@@ -162,6 +164,45 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_code_level_value:
+          id: field_code_level_value
+          table: node__field_code_level
+          field: field_code_level_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            Title: Title
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: list_field
       sorts:
         field_numeric_order_value:
           id: field_numeric_order_value
@@ -175,7 +216,7 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: 'City Code'
+      title: 'City Charter'
       header: {  }
       footer: {  }
       empty: {  }
@@ -190,90 +231,74 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  entity_reference_1:
-    display_plugin: entity_reference
-    id: entity_reference_1
-    display_title: 'Entity Reference'
+  code_titles:
+    display_plugin: page
+    id: code_titles
+    display_title: 'Page: Code titles'
+    position: 1
+    display_options:
+      display_extenders: {  }
+      path: code
+      display_description: ''
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  eva_code_chapters:
+    display_plugin: entity_view
+    id: eva_code_chapters
+    display_title: 'EVA: Code chapters'
     position: 2
     display_options:
       display_extenders: {  }
-      style:
-        type: entity_reference
-        options:
-          search_fields:
-            title: title
-      fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
+      display_description: ''
+      title: Chapters
+      defaults:
+        filters: false
+        filter_groups: false
+        arguments: false
+      entity_type: node
+      bundles:
+        - city_code
+      arguments:
+        field_code_parent_target_id:
+          id: field_code_parent_target_id
+          table: node__field_code_parent
+          field: field_code_parent_target_id
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-      defaults:
-        fields: false
-        filters: false
-        filter_groups: false
-      pager:
-        type: none
-        options:
-          offset: 0
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
       filters:
         type:
           id: type
@@ -284,7 +309,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            code_title: code_title
+            city_code: city_code
           group: 1
           exposed: false
           expose:
@@ -316,6 +341,45 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_code_level_value:
+          id: field_code_level_value
+          table: node__field_code_level
+          field: field_code_level_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            Chapter: Chapter
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: list_field
       filter_groups:
         operator: AND
         groups:
@@ -325,22 +389,152 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 1
+  eva_code_sections:
+    display_plugin: entity_view
+    id: eva_code_sections
+    display_title: 'EVA: Code Sections'
+    position: 2
     display_options:
       display_extenders: {  }
-      path: code
+      display_description: ''
+      title: Sections
+      defaults:
+        filters: false
+        filter_groups: false
+        arguments: false
+      entity_type: node
+      bundles:
+        - city_code
+      arguments:
+        field_code_parent_target_id:
+          id: field_code_parent_target_id
+          table: node__field_code_parent
+          field: field_code_parent_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            city_code: city_code
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+        field_code_level_value:
+          id: field_code_level_value
+          table: node__field_code_level
+          field: field_code_level_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            Section: Section
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: list_field
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
