--- a/web/sites/default/config/workflows.workflow.charter_code_policies.yml
+++ b/web/sites/default/config/workflows.workflow.charter_code_policies.yml
@@ -4,9 +4,7 @@ status: true
 dependencies:
   config:
     - node.type.city_charter
-    - node.type.code_chapter
-    - node.type.code_section
-    - node.type.code_title
+    - node.type.city_code
     - node.type.policy
   module:
     - content_moderation
@@ -57,8 +55,6 @@ type_settings:
   entity_types:
     node:
       - city_charter
-      - code_chapter
-      - code_section
-      - code_title
+      - city_code
       - policy
   default_moderation_state: draft
