--- a/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
@@ -23,6 +23,9 @@ process:
     migration: city_code_chapters
     no_stub: true
     source: chapter_id
+  field_code_level:
+    plugin: default_value
+    default_value: Section
 destination:
   plugin: 'entity:node'
-  default_bundle: code_section
+  default_bundle: city_code
