--- a/web/modules/custom/portland_migrations/migrations/city_code_titles.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_titles.yml
@@ -14,6 +14,9 @@ process:
   title: title
   field_numeric_order: number
   field_legacy_path: url
+  field_code_level:
+    plugin: default_value
+    default_value: Title
 destination:
   plugin: 'entity:node'
-  default_bundle: code_title
+  default_bundle: city_code
