--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -16,6 +16,8 @@ permissions:
   - 'create charter_article content'
   - 'create charter_chapter content'
   - 'create charter_section content'
+  - 'create city_charter content'
+  - 'create city_code content'
   - 'create code_chapter content'
   - 'create code_section content'
   - 'create code_title content'
@@ -25,6 +27,7 @@ permissions:
   - 'delete any charter_article content'
   - 'delete any charter_chapter content'
   - 'delete any charter_section content'
+  - 'delete any city_code content'
   - 'delete any code_chapter content'
   - 'delete any code_section content'
   - 'delete any code_title content'
@@ -32,12 +35,14 @@ permissions:
   - 'delete charter_article revisions'
   - 'delete charter_chapter revisions'
   - 'delete charter_section revisions'
+  - 'delete city_code revisions'
   - 'delete code_chapter revisions'
   - 'delete code_section revisions'
   - 'delete code_title revisions'
   - 'delete own charter_article content'
   - 'delete own charter_chapter content'
   - 'delete own charter_section content'
+  - 'delete own city_code content'
   - 'delete own code_chapter content'
   - 'delete own code_section content'
   - 'delete own code_title content'
@@ -47,6 +52,7 @@ permissions:
   - 'edit any charter_article content'
   - 'edit any charter_chapter content'
   - 'edit any charter_section content'
+  - 'edit any city_code content'
   - 'edit any code_chapter content'
   - 'edit any code_section content'
   - 'edit any code_title content'
@@ -54,6 +60,7 @@ permissions:
   - 'edit own charter_article content'
   - 'edit own charter_chapter content'
   - 'edit own charter_section content'
+  - 'edit own city_code content'
   - 'edit own code_chapter content'
   - 'edit own code_section content'
   - 'edit own code_title content'
@@ -63,6 +70,7 @@ permissions:
   - 'revert charter_article revisions'
   - 'revert charter_chapter revisions'
   - 'revert charter_section revisions'
+  - 'revert city_code revisions'
   - 'revert code_chapter revisions'
   - 'revert code_section revisions'
   - 'revert code_title revisions'
@@ -75,6 +83,7 @@ permissions:
   - 'view charter_article revisions'
   - 'view charter_chapter revisions'
   - 'view charter_section revisions'
+  - 'view city_code revisions'
   - 'view code_chapter revisions'
   - 'view code_section revisions'
   - 'view code_title revisions'
