POWR-1434 fix to field_code_parent

--- a/web/modules/custom/portland_migrations/migrations/city_code_chapters.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_chapters.yml
@@ -13,7 +13,7 @@ process:
     default_value: 1
   title: name
   field_numeric_order: number
-  field_code_title:
+  field_code_parent:
     plugin: migration_lookup
     migration: city_code_titles
     no_stub: true
