--- a/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
@@ -18,7 +18,7 @@ process:
   field_section_body/format:
     plugin: default_value
     default_value: full_html
-  field_charter_chapter:
+  field_code_parent:
     plugin: migration_lookup
     migration: city_code_chapters
     no_stub: true
