POWR-1434 fix the title of the code list view

--- a/web/sites/default/config/views.view.city_code.yml
+++ b/web/sites/default/config/views.view.city_code.yml
@@ -216,7 +216,7 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: 'City Charter'
+      title: 'City Code'
       header: {  }
       footer: {  }
       empty: {  }
