POWR-1520 uninstall unused modules.

--- a/web/sites/default/config/core.entity_view_display.node.city_code.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_code.default.yml
@@ -12,20 +12,28 @@ dependencies:
     - field.field.node.city_code.field_section_body
     - node.type.city_code
   module:
-    - panelizer
     - text
     - user
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: node.city_code.default
 targetEntityType: node
 bundle: city_code
 mode: default
 content:
+  city_code_list_eva_code_chapters:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  city_code_list_eva_code_sections:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_documents:
     weight: 2
     label: above
