--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -16,15 +16,8 @@ dependencies:
     - entity_reference_revisions
     - file
     - link
-    - panelizer
     - text
     - user
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: node.council_document.default
 targetEntityType: node
 bundle: council_document
@@ -99,4 +92,5 @@ content:
     type: entity_reference_label
     region: content
 hidden:
+  group_content: true
   links: true
