--- a/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
@@ -22,14 +22,8 @@ dependencies:
     - node.type.development_permit
   module:
     - ds
-    - panelizer
     - user
 third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
   ds:
     layout:
       id: cloudy_card
@@ -89,4 +83,6 @@ hidden:
   field_search_keywords: true
   field_service_location: true
   field_topics: true
+  group_content: true
   links: true
+  toc_js: true
