--- a/web/sites/default/config/core.entity_view_display.node.external_resource.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.external_resource.teaser.yml
@@ -4,17 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.external_resource.field_destination_url
     - field.field.node.external_resource.field_summary
     - node.type.external_resource
   module:
-    - panelizer
     - user
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: node.external_resource.teaser
 targetEntityType: node
 bundle: external_resource
