--- a/web/sites/default/config/core.entity_view_display.node.city_code.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_code.search_result.yml
@@ -15,7 +15,6 @@ dependencies:
   module:
     - ds
     - layout_builder
-    - panelizer
     - text
     - user
 third_party_settings:
@@ -91,16 +90,26 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: node.city_code.search_result
 targetEntityType: node
 bundle: city_code
 mode: search_result
 content:
+  city_code_list_eva_code_chapters:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  city_code_list_eva_code_sections:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_prefix_note:
     weight: 2
     label: above
