--- a/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
@@ -22,14 +22,7 @@ dependencies:
     - node.type.development_permit
   module:
     - ds
-    - panelizer
     - user
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: node.development_permit.search_result
 targetEntityType: node
 bundle: development_permit
@@ -73,4 +66,6 @@ hidden:
   field_search_keywords: true
   field_service_location: true
   field_topics: true
+  group_content: true
   links: true
+  toc_js: true
