--- a/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
+    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
@@ -18,14 +19,8 @@ dependencies:
     - node.type.page
   module:
     - ds
-    - panelizer
     - user
 third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
   ds:
     layout:
       id: cloudy_card
@@ -126,3 +121,4 @@ hidden:
   field_topics: true
   group_content: true
   links: true
+  toc_js: true
