POWR-1353 Update conditional field setting for Map

--- a/web/sites/default/config/field.field.media.map.field_map_type.yml
+++ b/web/sites/default/config/field.field.media.map.field_map_type.yml
@@ -20,7 +20,9 @@ label: 'Map type'
 description: ''
 required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: 'Google Map embed'
 default_value_callback: ''
 settings: {  }
 field_type: list_string
