--- a/web/sites/default/config/core.entity_form_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.default.yml
@@ -29,7 +29,25 @@ content:
     weight: 7
     settings:
       progress_indicator: throbber
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields:
+        4d0fd234-eeb8-480d-a6a3-d711e5c0fa44:
+          dependee: field_map_type
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: 'Geo file'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: media
+          bundle: map
     type: file_generic
     region: content
   field_map_type:
