POWR-1455 updated Calendar item displays to match events

--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
@@ -23,26 +23,25 @@ targetEntityType: node
 bundle: calendar_item
 mode: default
 content:
-  body:
-    type: text_trimmed
-    weight: 0
-    region: content
-    label: above
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
   field_all_day:
-    weight: 3
-    label: above
+    weight: 7
+    label: hidden
     settings:
-      format: default
+      format: custom
+      format_custom_true: 'All day'
       format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: boolean
     region: content
   field_calendar_item_location:
-    weight: 6
+    weight: 4
     label: above
     settings:
       link_to_entity: false
@@ -50,16 +49,15 @@ content:
     type: string
     region: content
   field_calendar_item_type:
-    weight: 0
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_rss_category
+    weight: 3
     region: content
-  field_end_date:
-    weight: 4
     label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_end_date:
+    weight: 6
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
@@ -67,31 +65,23 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 5
-    label: above
+    weight: 9
+    label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: time_formatter
     region: content
-  field_participants:
-    weight: 7
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_reviewer:
-    type: author
-    weight: 0
-    region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
   field_start_date:
-    weight: 1
-    label: above
+    weight: 5
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
@@ -99,22 +89,24 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 2
-    label: above
+    weight: 8
+    label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: time_formatter
     region: content
-  group_content:
-    type: entity_reference_entity_view
-    weight: 0
-    region: content
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
 hidden:
+  body: true
   content_moderation_control: true
+  field_participants: true
+  field_reviewer: true
+  group_content: true
   links: true
