--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.related.yml
@@ -1,9 +1,9 @@
-uuid: c30f6beb-184e-4d55-8779-10d48703b235
+uuid: d710799b-0d3a-4ac2-a737-5a2b4fb50029
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.search_result
+    - core.entity_view_mode.node.related
     - field.field.node.calendar_item.body
     - field.field.node.calendar_item.field_all_day
     - field.field.node.calendar_item.field_calendar_item_location
@@ -19,6 +19,7 @@ dependencies:
     - datetime
     - ds
     - field_group
+    - layout_builder
     - panelizer
     - time_field
     - user
@@ -46,25 +47,18 @@ third_party_settings:
           layout_class: {  }
     regions:
       second:
-        - 'bundle_field:node'
-        - field_calendar_item_type
+        - node_title
         - field_start_date
         - field_end_date
-        - node_title
-        - field_all_day
         - group_event_date
-        - field_start_time
         - group_event_time
+        - field_all_day
+        - field_start_time
         - field_end_time
     fields:
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
       node_title:
         plugin_id: node_title
-        weight: 2
+        weight: 0
         label: hidden
         formatter: default
   field_group:
@@ -73,7 +67,7 @@ third_party_settings:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 3
+      weight: 1
       format_type: html_element
       format_settings:
         id: ''
@@ -93,7 +87,7 @@ third_party_settings:
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 4
+      weight: 2
       format_type: html_element
       format_settings:
         id: ''
@@ -107,35 +101,21 @@ third_party_settings:
         speed: fast
       label: 'Event time'
       region: hidden
-id: node.calendar_item.search_result
+  layout_builder:
+    allow_custom: false
+    enabled: false
+id: node.calendar_item.related
 targetEntityType: node
 bundle: calendar_item
-mode: search_result
+mode: related
 content:
   field_all_day:
-    weight: 3
+    weight: 7
     label: hidden
     settings:
-      format: default
+      format: custom
+      format_custom_true: 'All day'
       format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: second
-  field_calendar_item_type:
-    weight: 1
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: second
-  field_end_date:
-    weight: 2
-    label: hidden
-    settings:
-      timezone_override: ''
-      format_type: month_day_year
     third_party_settings:
       ds:
         ft:
@@ -144,10 +124,19 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+    type: boolean
+    region: second
+  field_end_date:
+    weight: 1
+    label: hidden
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
     type: datetime_default
     region: second
   field_end_time:
-    weight: 5
+    weight: 9
     label: hidden
     settings:
       time_format: 'g:i a'
@@ -162,23 +151,16 @@ content:
     type: time_formatter
     region: second
   field_start_date:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
+      format_type: medium
       timezone_override: ''
-      format_type: month_day_year
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
+    third_party_settings: {  }
     type: datetime_default
     region: second
   field_start_time:
-    weight: 4
+    weight: 8
     label: hidden
     settings:
       time_format: 'g:i a'
@@ -196,6 +178,7 @@ hidden:
   body: true
   content_moderation_control: true
   field_calendar_item_location: true
+  field_calendar_item_type: true
   field_participants: true
   field_reviewer: true
   group_content: true
