--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
@@ -11,10 +11,12 @@ dependencies:
     - field.field.node.calendar_item.field_end_date
     - field.field.node.calendar_item.field_end_time
     - field.field.node.calendar_item.field_participants
+    - field.field.node.calendar_item.field_reviewer
     - field.field.node.calendar_item.field_start_date
     - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
   module:
+    - datetime
     - ds
     - user
 third_party_settings:
@@ -25,7 +27,6 @@ third_party_settings:
       disable_css: false
       entity_classes: all_classes
       settings:
-        classes: {  }
         wrappers:
           first: div
           second: div
@@ -33,46 +34,154 @@ third_party_settings:
         attributes: ''
         link_attribute: ''
         link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      first:
-        - field_calendar_item_type
-        - group_content
-        - body
+      second:
+        - node_title
         - field_all_day
-        - field_end_date
-        - field_end_time
-        - field_participants
-        - field_start_date
         - field_start_time
-        - field_calendar_item_location
+        - field_end_time
+        - field_start_date
+        - field_end_date
+        - group_event_date
+        - group_event_time
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+  field_group:
+    group_event_date:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: ''
+      weight: 6
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event date'
+      region: hidden
+    group_event_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: ''
+      weight: 7
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event time'
+      region: hidden
 id: node.calendar_item.teaser
 targetEntityType: node
 bundle: calendar_item
 mode: teaser
 content:
-  field_calendar_item_location:
-    type: string
+  field_all_day:
+    type: boolean
     weight: 1
-    region: content
+    region: second
     label: above
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_calendar_item_type:
-    type: entity_reference_label
-    weight: 0
-    region: content
+      format: custom
+      format_custom_true: 'All day'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_end_date:
+    type: datetime_default
+    weight: 5
+    region: second
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_end_time:
+    type: time_formatter
+    weight: 3
+    region: second
+    label: above
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_start_date:
+    type: datetime_default
+    weight: 4
+    region: second
+    label: above
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_start_time:
+    type: time_formatter
+    weight: 2
+    region: second
+    label: above
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   body: true
-  field_all_day: true
-  field_end_date: true
-  field_end_time: true
+  content_moderation_control: true
+  field_calendar_item_location: true
+  field_calendar_item_type: true
   field_participants: true
-  field_start_date: true
-  field_start_time: true
+  field_reviewer: true
   group_content: true
   links: true
