POWR-1431 refactor roles and permissions

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -6,7 +6,7 @@ _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
 label: 'Authenticated user'
-weight: 1
+weight: -9
 is_admin: false
 permissions:
   - 'access audio_browser entity browser pages'
@@ -53,6 +53,7 @@ permissions:
   - 'schedule editorial transition archived_published'
   - 'schedule editorial transition create_new_draft'
   - 'schedule editorial transition publish'
+  - 'schedule editorial transition send_to_review'
   - 'schedule editorial_default_published transition archive'
   - 'schedule editorial_default_published transition create_new_draft'
   - 'schedule editorial_default_published transition publish'
@@ -82,6 +83,7 @@ permissions:
   - 'view any unpublished content'
   - 'view city_service revisions'
   - 'view event revisions'
+  - 'view external_resource revisions'
   - 'view field_body'
   - 'view field_popular'
   - 'view field_shortname_or_acronym'
