--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -9,7 +9,7 @@ third_party_settings:
     description: 'Office of the City Auditor code editor'
 id: code_editor
 label: 'Code editor'
-weight: 4
+weight: -3
 is_admin: null
 permissions:
   - 'bypass honeypot protection'
@@ -21,7 +21,6 @@ permissions:
   - 'create code_chapter content'
   - 'create code_section content'
   - 'create code_title content'
-  - 'create policy content'
   - 'create terms in policy_category'
   - 'create terms in policy_type'
   - 'delete any charter_article content'
@@ -69,7 +68,6 @@ permissions:
   - 'edit own code_chapter content'
   - 'edit own code_section content'
   - 'edit own code_title content'
-  - 'edit own policy content'
   - 'edit terms in policy_category'
   - 'edit terms in policy_type'
   - 'revert charter_article revisions'
@@ -80,7 +78,9 @@ permissions:
   - 'revert code_chapter revisions'
   - 'revert code_section revisions'
   - 'revert code_title revisions'
-  - 'revert policy revisions'
+  - 'schedule charter_code_policies transition create_new_draft'
+  - 'schedule charter_code_policies transition publish'
+  - 'schedule charter_code_policies transition unpublish'
   - 'use charter_code_policies transition create_new_draft'
   - 'use charter_code_policies transition publish'
   - 'use charter_code_policies transition unpublish'
@@ -94,4 +94,3 @@ permissions:
   - 'view code_chapter revisions'
   - 'view code_section revisions'
   - 'view code_title revisions'
-  - 'view policy revisions'
