--- a/web/sites/default/config/user.role.council_clerk.yml
+++ b/web/sites/default/config/user.role.council_clerk.yml
@@ -9,7 +9,7 @@ third_party_settings:
     description: 'The council clerk can add and edit council documents and meetings.'
 id: council_clerk
 label: 'Council clerk'
-weight: 5
+weight: -5
 is_admin: null
 permissions:
   - 'bypass honeypot protection'
@@ -27,6 +27,12 @@ permissions:
   - 'edit own council_meeting content'
   - 'revert council_document revisions'
   - 'revert council_meeting revisions'
+  - 'schedule charter_code_policies transition create_new_draft'
+  - 'schedule charter_code_policies transition publish'
+  - 'schedule charter_code_policies transition unpublish'
+  - 'use charter_code_policies transition create_new_draft'
+  - 'use charter_code_policies transition publish'
+  - 'use charter_code_policies transition unpublish'
   - 'use council_meetings_and_documents transition create_new_draft'
   - 'use council_meetings_and_documents transition publish'
   - 'use council_meetings_and_documents transition unpublish'
