--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -9,7 +9,7 @@ third_party_settings:
     description: 'Staff that get permissions to edit content across the site, regardless of group membership.'
 id: sitewide_editor
 label: 'Sitewide editor'
-weight: 3
+weight: -1
 is_admin: null
 permissions:
   - 'access content overview'
@@ -112,6 +112,7 @@ permissions:
   - 'edit own top_search content'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
+  - 'edit terms in park_location_type'
   - 'edit terms in topics'
   - 'revert alert revisions'
   - 'revert all revisions'
