POWR-1431 fix an admin view path and exposed form to work a little better

--- a/web/sites/default/config/views.view.admin_policies.yml
+++ b/web/sites/default/config/views.view.admin_policies.yml
@@ -8,7 +8,7 @@ dependencies:
     - taxonomy.vocabulary.policy_category
     - taxonomy.vocabulary.policy_type
     - user.role.administrator
-    - user.role.code_editor
+    - user.role.policy_editor
     - user.role.sitewide_editor
     - workflows.workflow.charter_code_policies
   module:
@@ -36,9 +36,9 @@ display:
         type: role
         options:
           role:
-            administrator: administrator
+            policy_editor: policy_editor
             sitewide_editor: sitewide_editor
-            code_editor: code_editor
+            administrator: administrator
       cache:
         type: tag
         options: {  }
@@ -916,7 +916,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: policy/admin
+      path: policies/admin
       menu:
         type: normal
         title: 'Manage policies'
