--- a/web/sites/default/config/block.block.exposedformportland_policies_searchpage_1.yml
+++ b/web/sites/default/config/block.block.exposedformportland_policies_searchpage_1.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/policies*\r\n/policies/search"
+    pages: "/policies\r\n/policies/search"
     negate: false
     context_mapping: {  }
