POWR-1455 deleted and re-created field groups so they could be correctly named to use the proper templates from events

--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.related.yml
@@ -50,8 +50,8 @@ third_party_settings:
         - node_title
         - field_start_date
         - field_end_date
-        - group_event_date
-        - group_event_time
+        - group_date
+        - group_time
         - field_all_day
         - field_start_time
         - field_end_time
@@ -62,12 +62,12 @@ third_party_settings:
         label: hidden
         formatter: default
   field_group:
-    group_event_date:
+    group_date:
       children:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 1
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
@@ -81,13 +81,13 @@ third_party_settings:
         speed: fast
       label: 'Event date'
       region: hidden
-    group_event_time:
+    group_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 2
+      weight: 4
       format_type: html_element
       format_settings:
         id: ''
@@ -130,9 +130,16 @@ content:
     weight: 1
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: second
   field_end_time:
@@ -154,9 +161,16 @@ content:
     weight: 0
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: second
   field_start_time:
