--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.search_result.yml
@@ -49,13 +49,15 @@ third_party_settings:
         - 'bundle_field:node'
         - field_calendar_item_type
         - field_start_date
-        - field_end_date
         - node_title
-        - field_all_day
+        - field_end_date
         - group_event_date
-        - field_start_time
+        - field_all_day
         - group_event_time
+        - field_start_time
+        - group_date
         - field_end_time
+        - group_time
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -68,12 +70,12 @@ third_party_settings:
         label: hidden
         formatter: default
   field_group:
-    group_event_date:
+    group_date:
       children:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: html_element
       format_settings:
         id: ''
@@ -87,13 +89,13 @@ third_party_settings:
         speed: fast
       label: 'Event date'
       region: hidden
-    group_event_time:
+    group_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 4
+      weight: 6
       format_type: html_element
       format_settings:
         id: ''
