--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
@@ -39,13 +39,15 @@ third_party_settings:
     regions:
       second:
         - node_title
+        - group_event_date
         - field_all_day
+        - group_event_time
         - field_start_time
+        - group_date
         - field_end_time
         - field_start_date
+        - group_time
         - field_end_date
-        - group_event_date
-        - group_event_time
     fields:
       node_title:
         plugin_id: node_title
@@ -53,12 +55,12 @@ third_party_settings:
         label: hidden
         formatter: default
   field_group:
-    group_event_date:
+    group_date:
       children:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 6
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
@@ -72,13 +74,13 @@ third_party_settings:
         speed: fast
       label: 'Event date'
       region: hidden
-    group_event_time:
+    group_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 7
+      weight: 4
       format_type: html_element
       format_settings:
         id: ''
