--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
@@ -41,8 +41,8 @@ content:
     type: boolean
     region: content
   field_calendar_item_location:
-    weight: 4
-    label: above
+    weight: 3
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -50,7 +50,7 @@ content:
     region: content
   field_calendar_item_type:
     type: entity_reference_rss_category
-    weight: 3
+    weight: 2
     region: content
     label: above
     settings: {  }
@@ -59,9 +59,16 @@ content:
     weight: 6
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: content
   field_end_time:
@@ -79,13 +86,28 @@ content:
             classes: {  }
     type: time_formatter
     region: content
+  field_participants:
+    type: string
+    weight: 4
+    region: content
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_start_date:
     weight: 5
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: content
   field_start_time:
@@ -106,7 +128,6 @@ content:
 hidden:
   body: true
   content_moderation_control: true
-  field_participants: true
   field_reviewer: true
   group_content: true
   links: true
