--- a/web/sites/default/config/facets.facet.services_by_topic.yml
+++ b/web/sites/default/config/facets.facet.services_by_topic.yml
@@ -16,13 +16,16 @@ show_only_one_result: false
 field_identifier: topic_name
 facet_source_id: 'search_api:views_page__services_fullindex__page_1'
 widget:
-  type: links
+  type: checkbox
   config:
     show_numbers: true
     soft_limit: 0
     soft_limit_settings:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
+    show_reset_link: false
+    reset_text: 'Show all'
+    hide_reset_when_no_selection: false
 query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
